# bazel_sandbox

./: .bazelrc  .gitignore  MODULE.bazel  README.md
Main/: BUILD  main.cpp  math.cpp  math.h  math_dll_interface.cpp  math_dll_interface.h  math_import_defs.h
toolchain/: BUILD  toolchain_config.bzl
