###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

register_execution_platforms(
    "//:windows_platform"
)

register_toolchains(
    "//toolchain:mingw_cc_toolchain",
)